assets/css/style.css
/* ... */
.content .main-content .post .read-more:hover {
  background: #0d474d;
  color: white !important;
  transition: 0.26s;
}

.content .main-content .post .post-image {
  width: 50%;
  height: 200px;
  float: left;
}

.content .main-content .post .post-preview {
  width: 100%;
  padding: 10px;
  float: none;
}

.content .sidebar {
  width: 30%;
  float: left;
}

.content .sidebar.single {
  padding: 0px 10px;
}

.content .main-content .recent-post {
  margin: 20px;
}

.content .sidebar .section {
  background: white;
  padding: 20px;
  border-radius: 10px;
  margin-bottom: 20px;
}

.content .sidebar .section.popular {
  border: 2px solid blu;
}

.content .sidebar .section-title {
  margin: 10px 0px 10px 0px;
}

.content .sidebar .section.search {
  margin-top: 80px;
}

.content .sidebar .section.topics ul {
  margin: 0px;
  padding: 0px;
  list-style: none;
  border-bottom: 1px solid #0d474d;
}

.content .sidebar .section.topics ul li a {
  display: block;
  border-bottom: 1px solid #0d474d;
  padding: 15px 0px 15px 0px;
  transition: all 0.3s;
}

.content .sidebar .section.topics ul li a:hover {
  padding-left: 15px;
  transition: all 0.3s;
}

/* Auth Pages */

.auth-content {
  width: 30%;
  margin: 50px auto;
  padding: 20px;
  background: white;
  border-radius: 5px;
}

.auth-content form div {
  margin-bottom: 10px;
}

.auth-content form p {
  text-align: center;
}

.auth-content form p a {
  text-decoration: underline;
}

.form-title {
  text-align: center;
}
/* //Auth Pages */

/* Footer */

.footer {
  background: #303036;
  color: #d3d3d3;
  height: 450px;
  position: relative;
}

.footer .footer-content {
  height: 350px;
  display: flex;
}

.footer .footer-content .footer-section {
  flex: 1;
  padding: 25px;
}

.footer .footer-bottom {
  background: #343a40;
  color: #686868;
  text-align: center;
  position: absolute;
  bottom: 0px;
  left: 0px;
  padding-top: 10px;
  height: 50px;
  width: 100%;
}

.footer .footer-content h1,
.footer .footer-content h2 {
  color: white;
}

.footer .footer-content .about h1 span {
  color: #05f7ff;
}

.footer .footer-content .about .contact span {
  display: block;
  font-size: 1.1rem;
  margin-bottom: 8px;
}

.footer .footer-content .about .socials a {
  border: 1px solid gray;
  width: 45px;
  height: 41px;
  padding-top: 5px;
  margin-right: 5px;
  text-align: center;
  display: inline-block;
  font-size: 1.3rem;
  border-radius: 5px;
  transition: all 0.3s;
}

.footer .footer-content .about .socials a:hover {
  border: 1px solid white;
  color: white;
  transition: all 0.3s;
}

.footer .footer-content .links ul a {
  display: block;
  margin-bottom: 10px;
  font-size: 1.2rem;
  transition: all 0.5s;
}

.footer .footer-content .links ul a:hover {
  color: white;
  margin-left: 15px;
  transition: all 0.5s;
}

.footer .footer-content .contact-form .contact-input {
  background: #3e4b47;
  color: #bebdbd;
  margin-bottom: 10px;
  line-height: 1.5rem;
  padding: 0.9rem 1.5rem;
  border: none;
}

.footer .footer-content .contact-form .contact-input:focus {
  background: #1a1a1a;
}

.footer .footer-content .contact-form .contact-btn {
  float: right;
  font-size: 1.2rem;
  font-family: 'lora', 'serif';
}

/* //Footer */

/* MEDIA QUERIES 934px*/

@media only screen and (max-width: 934px) {
  .content {
    width: 100%;
  }

  .main-content-wrapper {
    padding: 10px;
  }

  .content .main-content {
    width: 100%;
    padding: 10px;
  }

  .content .main-content .post {
    width: 100%;
  }

  .content .sidebar {
    width: 100%;
    padding: 10px;
  }

  .content .sidebar .section.search {
    margin-top: 30px;
  }

  .footer {
    height: auto;
  }

  .footer .footer-content {
    height: auto;
    flex-direction: column;
  }

  .footer .footer-content .contact-form {
    padding-bottom: 90px;
  }

  .footer .footer-content .contact-form .contact-btn {
    width: 100%;
  }

  .auth-content {
    width: 50%;
  }

  .content .sidebar .section.popular {
    margin-top: 20px;
  }
}

/* // MEDIA QUERIES 934px*/

/* MEDIA QUERIES 770px*/

@media only screen and (max-width: 770px) {
  header {
    height: auto; /* Change from 66px */
    position: relative;
    z-index: 100;
  }

  .content .sidebar {
    width: 100%;
    padding: 10px;
  }

  header ul {
    width: 100%;
    background: #0e94a0;
    max-height: 0px;
    overflow: hidden;
    display: block; /* Ensure it is block */
  }

  .showing {
    max-height: 100em;
  }

  header ul li {
    width: 100%;
    float: none; /* Stop floating on mobile */
  }

  header ul li ul {
    position: static;
    display: block;
    width: 100%;
  }

  header ul li ul li a {
    padding: 10px;
    background: #0e94a0;
    color: white;
    padding-left: 50px;
  }

  header ul li ul li a.logout {
    color: red;
  }

  header .menu-toggle {
    display: block;
    position: absolute;
    right: 20px;
    top: 20px;
    font-size: 1.9em;
  }

  header .logo {
    margin-left: 0.5em;
  }

  .main-content-wrapper {
    padding: 10px;
  }

  .auth-content {
    width: 60%;
  }

  .content .sidebar .section.popular {
    margin-top: 20px;
  }

  .content .main-content .post .read-more {
    position: absolute;
    bottom: 10px;
    right: 10px;
    left: 10px; /* Spread it across the bottom as requested */
    text-align: center;
  }
}
/* ... */

